pre-2.X.X
   Bug Fixes
     - allow SVG resources to be selectable alongside Image resources and context menu to work in BookBrowser
     - because Linux has multiple light and dark themes (but different)
         always send out our internal theme change signal when palette changes

   New Features
     - upgrade MacOS and Windows release and ci builds to use Qt 6.8.2
     - upgrade MacOS and Windows release and ci builds to embed Python 3.13.2
     - move all platforms to use cmake FindPython3 to simplify our cmake files and remove leftovers
     - add ability to easily clear an Open With editor list, without need to edit ini files


Sigil-2.4.2
   Bug Fixes
     - ensure CodeView code highlighting colors coincide with dark/light themes on certain Linux DEs
     - fix sigil-gumbo gumboc to work with Python 3.13+ - ie. work around backwards incompatible changes in ctypes
     - fix Replacement Chooser table to allow for multiple line row heights in Before and After fields (regression)
     - prevent too many warnings when no media types provided in OPF by generating the warning collectively
     - prevent  build warnings by using hunspell's std:string interface (not C char * ones)
     - fix files in third party code that used latin-1 encoding to now use utf-8
     - fix old use of 'python' in python code header lines to always use 'python3'
     - removed user scope installs from winget util they work properly with dependencies
     - restore Find&Replace if it was open when the user tries to exit Sigil and then aborts the exit

   New Features
     - Added new tool: 'Update OPF Manifest Media Types' to set unrecognized media types based on actual file contents


Sigil-2.4.0
   New Features
     - added a GetInfo dialog and right click menu option for XHTML files that provides a collection
         of information specific to that file without having to run Reports (including a word count)