@@ -3,6 +3,7 @@ pre-2.X.X
      - allow SVG resources to be selectable alongside Image resources and context menu to work in BookBrowser
      - because Linux has multiple light and dark themes (but different)
          always send out our internal theme change signal when palette changes
+     - detect urls in altimg attributes in math tags and properly update them is changed
 
    New Features
      - upgrade MacOS and Windows release and ci builds to use Qt 6.8.2
